@@ -1,58 +1,27 @@
 plugins {
-    id 'java'
     id 'application'
-    id 'org.javamodularity.moduleplugin' version '1.8.12'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
-
-group 'it.unibo'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
-ext {
-    junitVersion = '5.10.2'
-}
-
-sourceCompatibility = '22'
-targetCompatibility = '22'
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-application {
-    mainModule = 'it.unibo.smartcrossroads'
-    mainClass = 'it.unibo.smartcrossroads.TrafficApplication'
+dependencies {
+    implementation("io.github.jason-lang:interpreter:3.2.0")
 }
 
 javafx {
-    version = '22.0.1'
-    modules = ['javafx.controls', 'javafx.fxml']
+    version = "23.0.2"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
-dependencies {
-    implementation('org.controlsfx:controlsfx:11.2.1')
+mainClassName = 'it.unibo.smartcrossroads.TrafficApplication'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
 }
 
-test {
-    useJUnitPlatform()
-}
-
-jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'app'
-    }
-}
-
-jlinkZip {
-    group = 'distribution'
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += "--enable-preview"
 }
